Page MenuHome GnuPG

Patches to compile pinentry-1.2.0 cleanly with mingw.org's MinGW
Closed, ResolvedPublic

Description

The patches attached below fix several minor issues with building pinentry with mingw.org's MinGW on MS-Windows:

  • symlink command that's part of "make install" that fails to use $(EXEEXT) on the target
  • unnecessary inclusion of iconv.h and langinfo.h in pinentry-curses.c, which fails the compilation when these headers are not available
  • compilation warning in pinentry-curses.c due to type mismatch
  • a simple replacement for the missing nl-langinfo function in pinentry.c
  • compiler warnings in secmem.c due to variables used only in some configurations
  • link error buulding pinentry-w32.exe because libiconv is not on the link command line

Related Objects

Event Timeline

gniibe triaged this task as Normal priority.
gniibe added projects: pinentry, Windows.
gniibe added a subscriber: gniibe.

Thank you for your report.

Firstly, I'm going to apply a part of Makefile and secmem.c.

And I move functions from pinentry.c to pinentry-curses.c, so that pinentry-w32.exe can be build with no libiconv (which is actually not used).

Then, I appy nl_langinfo function to pinentry-curses.c.

I don't apply newterm type mismatch thing, as it's because of compatibility of curses library. (I confirmed that NetBSD curses uses char * for the first argument. Ncurses uses const char *)

gniibe added a project: Restricted Project.Mar 25 2022, 2:13 AM
gniibe removed a project: Restricted Project.

Fixed in 1.2.1.