build,w32: Fix build on Windows.

* Makefile.am: Add EXEEXT.
* secmem/secmem.c [HAVE_MMAP] (pool_is_mmapped): Only enabled with
HAVE_MMAP.
(init_pool): The variable PGSIZE is only used with HAVE_MMAP.

--

GnuPG-bug-id: 5893
Reported-by: Eli Zaretskii
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>